# colorback

./: IPPrintColored2020.cabal  README.md  colorback.cabal  hie.yaml
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.10.2/: package.cache
dist-newstyle/packagedb/ghc-8.8.4/: IPPrintColored2020-0.0.6-inplace.conf  package.cache
src/: IPPrintColored2020.hs  colorback.hs
