Name: IPPrintColored2020
Version: 0.0.3
Synopsis: another pretty printing for GHCi, working in 2020
description:
    Tired of seeing variations of packages to make GHCi output good enough for me , I have decided to consolidate one that works. Feel free to copy, modify, whatever. This one combines hscolour with pretty-show, which is a combination I have not been able to find (otherwise... don't code). 
    .
    /Usage/
    .
    Add the following lines to your @ghci.conf@ file:
    .
    > -- Pretty printing in colour
    > import IPPrintColored2020
    > :set -interactive-print=IPPrintColored2020.myPrint
    > :def col (\_ -> return ":set -interactive-print=IPPrintColored2020.myPrint")
    > :def bw (\_ -> return ":set -interactive-print=print")
    .
    To switch to colour
    .
    > :col
    .
    To switch to mono
    .
    > :nocol

Homepage: https://github.com/gabrielbcn/IPPrintColored2020
Author: Gabriel Mesquida Masana <gabriel.mesquida@me.com>
Maintainer: Gabriel Mesquida Masana <gabriel.mesquida@me.com>
Copyright: See license file
Category: Development
Build-type: Simple
Cabal-version: >= 1.16

extra-doc-files:
    README.md

extra-source-files:
    constraints

source-repository head
    type: git
    location: https://github.com/larskuhtz/ghci-pretty

Library
    default-language: Haskell2010
    hs-source-dirs: src

    exposed-modules:
        IPPrintColored2020

    build-depends:
        base == 4.*,
        pretty-show >= 1.10,
        hscolour >= 1.20

    ghc-options: -Wall

