Name: Colorback
Version: 0.1.0
Synopsis: another pretty printing for GHCi, working in 2020
Homepage: https://github.com/gabrielbcn/colorback
Author: Gabriel Mesquida Masana <gabriel.mesquida@me.com>
Maintainer: Gabriel Mesquida Masana <gabriel.mesquida@me.com>
Copyright: See license file
Category: Development
Build-type: Simple
Cabal-version: >= 2.0

extra-doc-files:
    README.md

source-repository head
    type: git
    location: https://github.com/gabrielbcn/colorback

library
    default-language: 
        Haskell2010
    hs-source-dirs: 
        src
    exposed-modules: 
        Colorback
    build-depends: 
        base, pretty-show, hscolour
    ghc-options: 
        -Wall

